--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -124,14 +124,14 @@
     outline: 2px solid #2c9caf;
   }
   
-  button:hover {
+  .button:hover {
     color: #ffffff;
     transform: scale(1.1);
     outline: 2px solid #70bdca;
     box-shadow: 4px 5px 17px -4px #268391;
   }
   
-  button::before {
+  .button::before {
     content: "";
     position: absolute;
     left: -50px;
@@ -144,7 +144,7 @@
     transition: width 1000ms;
   }
   
-  button:hover::before {
+  .button:hover::before {
     width: 250%;
   }
   
