--- a/src/Shared/navbar.css
+++ b/src/Shared/navbar.css
@@ -2,3 +2,16 @@
     all: initial;
     /* Add any additional styles you want for the .Toggle component */
   }
+
+  .active{
+    background-color: rgb(48, 130, 245);
+    width: 150px;
+    padding: 7px;
+    text-align: center;
+    border-radius: 8px;
+    color: white;
+    border-bottom: 2px solid blue;
+    border-width: 2px;
+    margin-top: 3px;
+    
+}
