--- a/src/Pages/AllBlogs/blogs.css
+++ b/src/Pages/AllBlogs/blogs.css
@@ -48,7 +48,7 @@
     width: 100%;
     background: linear-gradient(135deg, rgb(218, 232, 247) 0%, rgb(214, 229, 247) 100%);
     border: none;
-    color: #9EBCD9;
+    color: #010c16;
     font-size: 20px;
     border-radius: 50px;
   }
@@ -71,6 +71,10 @@
   
   .search__icon:hover {
     border-left: 3px solid white;
+    background-color: blue;
+    border-left: 3px solid black;
+    
+
   }
   
   .search__icon path {
