--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -127,7 +127,7 @@
   .button:hover {
     color: #ffffff;
     transform: scale(1.1);
-    outline: 2px solid #70bdca;
+    outline: 2px solid #034b57;
     box-shadow: 4px 5px 17px -4px #268391;
   }
   
